se activaron las  vistas de estudiante

--- a/src/views/estudiante/adicionRetiro.ejs
+++ b/src/views/estudiante/adicionRetiro.ejs
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+<div class="max-w-6xl mx-auto mt-10 bg-white rounded-lg shadow-lg p-8">
   <!-- Formulario de Adición -->
 <div class="bg-white p-6 rounded shadow flex flex-col h-full">
   <h2 class="text-2xl font-bold text-blue-700 mb-4">Solicitud de Adición</h2>
@@ -132,8 +132,8 @@ document.addEventListener("DOMContentLoaded", () => {
 
     <!-- Motivo -->
     <div>
-      <label for="motivoRetiro" class="block font-semibold">Motivo</label>
-      <textarea id="motivoRetiro" name="descripcion" class="w-full border p-2 rounded" required></textarea>
+      <label for="motivoRetiro" class="block font-semibold ">Motivo</label>
+      <textarea id="motivoRetiro" name="descripcion" class="w-full border  rounded" required></textarea>
     </div>
 
     <!-- Botón -->
