se activaron las vistas de docente

--- a/src/views/docente/gestionarActaEspecial.ejs
+++ b/src/views/docente/gestionarActaEspecial.ejs
@@ -108,7 +108,7 @@
       </div>
 
       <!-- Botón -->
-      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition w-full">
+      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transitionn w-full">
         Crear Acta
       </button>
     </form>
