--- a/src/views/docente/panel.ejs
+++ b/src/views/docente/panel.ejs
@@ -1,9 +1,10 @@
-<div class="grid grid-cols-1 gap-6">
+<div class="flex justify-center b-5 border-gray-200 ">
   <!-- Tarjeta: Gestión de Actas Especiales -->
-  <a href="/docente/actas-especiales" class="bg-white p-6 rounded shadow hover:shadow-lg transition hover:scale-105 flex flex-col items-center">
+  <a href="/docente/gestionar-acta-especial" class="bg-white p-6 rounded shadow hover:shadow-lg transition hover:scale-105 flex flex-col items-center">
+    <label class="block font-semibold"> Gestionar Actas Especiales</label>
     <div class="mb-4">
-      <img src="/img/panel/docente-actas.png" alt="Gestión de Actas Especiales" class="w-full h-70 object-cover rounded-md">
+      <img src="/img/gestionar actas especiales docente.png" alt="Gestión de Actas Especiales" class="w-80 h-90 object-cover rounded-md">
     </div>
-    <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Acceder</button>
+    <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transitionn">Acceder</button>
   </a>
 </div>
