--- a/src/views/estudiante/encuestas.ejs
+++ b/src/views/estudiante/encuestas.ejs
@@ -42,7 +42,7 @@
           <% } else { %>
             <div class="flex justify-center">
             <button onclick="document.getElementById('modal-<%= encuesta.id %>').classList.remove('hidden')"
-                    class="flex justify-center items-center bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mt-4">
+                    class="flex justify-center items-center bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition mt-4">
               Votar
             </button>
             </div>
