--- a/src/views/estudiante/inscripcion.ejs
+++ b/src/views/estudiante/inscripcion.ejs
@@ -38,7 +38,7 @@
       </select>
     </div>
 
-    <button type="submit" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">
+    <button type="submit" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">
       Enviar solicitud
     </button>
   </form>
