--- a/src/views/estudiante/actaEspecial.ejs
+++ b/src/views/estudiante/actaEspecial.ejs
@@ -19,7 +19,7 @@
     </div>
 
 
-    <button type="submit" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">
+    <button type="submit" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">
       Enviar solicitud
     </button>
   </form>
