--- a/src/views/estudiante/adicionRetiro.ejs
+++ b/src/views/estudiante/adicionRetiro.ejs
@@ -40,7 +40,7 @@
 
     <!-- Botón -->
     <div class="mt-auto">
-      <button type="submit" class="bg-blue-700 text-white px-4 py-2  rounded hover:bg-blue-800 w-full">
+      <button type="submit" class="bg-blue-700 text-white px-4 py-2  rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition w-full">
         Enviar solicitud de adición
       </button>
     </div>
