--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,8 +49,8 @@
       <img src="/img/inscripcion.jpg" alt="Solicitud de inscripción" class="w-full h-40 object-cover rounded-md">
     </div>
     <h3 class="text-xl font-semibold text-blue-800 mb-2">Solicitud de Inscripción</h3>
-    <p class="text-gray-600 mb-4">Realiza tu inscripción en línea de manera rápida y segura.</p>
-    <a href="/estudiante/inscripcion" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Inscribirme</a>
+    <p class="text-gray-600 mt-5 mb-7">Realiza tu inscripción en línea de manera rápida y segura.</p>
+    <a href="/estudiante/inscripcion" class="flex justify-center inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Inscribirme</a>
   </div>
 
   <!-- Tarjeta 2 -->
@@ -60,7 +60,7 @@
     </div>
     <h3 class="text-xl font-semibold text-blue-800 mb-7">Adición y Retiro</h3>
     <p class="text-gray-600 mb-4">Gestiona la adición y retiro de tus materias sin filas.</p>
-    <a href="/estudiante/adicion-retiro" class="inline-block mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Gestionar</a>
+    <a href="/estudiante/adicion-retiro" class="flex justify-center inline-block mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Gestionar</a>
   </div>
 
   <!-- Tarjeta 3 -->
@@ -70,7 +70,7 @@
     </div>
     <h3 class="text-xl font-semibold text-blue-800 mb-7">Actas Especiales</h3>
     <p class="text-gray-600 mb-4">Solicita actas especiales de manera digital y simplificada.</p>
-    <a href="/estudiante/acta-especial" class="inline-block mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Solicitar</a>
+    <a href="/estudiante/acta-especial" class="flex justify-center inline-block mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Solicitar</a>
   </div>
 
   <!-- Tarjeta 4 -->
@@ -80,7 +80,7 @@
     </div>
     <h3 class="text-xl font-semibold text-blue-800 mb-2">Encuestas</h3>
     <p class="text-gray-600 mb-4">Participa en encuestas para habilitar materias y mejorar la gestión académica.</p>
-    <a href="/estudiante/encuestas" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Responder</a>
+    <a href="/estudiante/encuestas" class="flex justify-center inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Responder</a>
   </div>
 </div>
 
